services, diseno web, marketing online, fotografia and crm page. css changes for h2, h3. Include for services section

--- a/_slicing/src/desarrollo-web.html
+++ b/_slicing/src/desarrollo-web.html
@@ -174,76 +174,67 @@
 		<section class="hero-header">
 			<div class="grid-container">
 				<div>
-					<h1>Sobre nosotros</h1>
-					<p class="subtitle">La referencia para disno web en la provincia de Alicante</p>
-				</div>
-			</div>
-		</section>
-		<section class="about">
-			<div class="grid-container">
-				<div class="grid-x">
-					<div class="medium-12 large-8 cell">
-						<h2>La empresa</h2>
-						<p>
-							Encantado diseño Web es una agencia especializada en el diseño y 
-							desarrollo de páginas Web elegantes que ayuda su organización a 
-							atraer y conservar el interes de sus clientes.
-						</p>
-						<p>
-							¡Nos encanta la web y entendemos lo que su empresa o 
-							organización necesita!
-						</p>
-						<p>
-							Tenemos más de 10 años de experencia combinada en el 
-							sector de diseño web. Desde septiembre 2006 estamos 
-							llevando la presentación de varias empresas a través de 
-							internet en la region de Alicante con Torrevieja como nuestra base.
-						</p>
-						<h2>Nesta misión</h2>
-						<p>
-							!Tener una página web no es suficiente¡ Una página web es su 
-							tarjeta de visita accesible para todos en cada momento del día. 
-							Así es muy importante que su página trae el mensaje adecuado 
-							para su negocio.
-						</p>
-						<p>
-							Le ayudamos a alcanzar nuevas audiencias y generar tráfico, 
-							promover su producto a través de internet y gestionar su propio 
-							contenido. Infórmenos sobre cuales son las características de su 
-							negocio, y le ofreceremos la solución que mejor se adapte a sus 
-							necesidades y que le permita sacar un mayor rendimiento a su página web.
-						</p>
-					</div>
-					<div class="large-4 cell show-for-large">
-						<img alt="electronics" src="graphics/831284068.jpg" title="electronics">
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="why attitude">
-			<div class="grid-container">
-				<div class="grid-x grid-margin-x">
-					<div class="medium-12 large-3 cell">
-						<h4>Nuestra actitud</h4>
-					</div>
-					<div class="medium-6 large-4 cell checkmark-green">
-						<ul>
-							<li>Somos apasionados en traducir su mensaje en una herramienta de gran alcance.</li>
-							<li>Escuchamos nuestros clientes y planteamos ideas con ellos.</li>
-							<li>Creamos páginas web que cumplen los estandares de web.</li>
-						</ul>
-					</div>
-					<div class="medium-6 large-5 cell checkmark-green">
-						<ul>
-							<li>Creamos páginas web accesible y fácil de usar.</li>
-							<li>Creamos páginas web que atraen sus audiencias y generan ventas</li>
-							<li>Nuestros trabajos han sido presentados en varias galerías de diseño Web y libros.</li>
-						</ul>
-					</div>
+					<h1>Desarrollo Web</h1>
+					<p class="subtitle">
+						Páginas Web a medida, garantía para un resultado cualitativo y fácil de usar.
+					</p>
 				</div>
 			</div>
         </section>
+        
+        <section class="about">
+            <div class="grid-container">
+                <div class="grid-x">
+                    <div class="medium-12 large-8 cell">
+                        <h2>Tienda online</h2>
+                        <p>
+							Vendiéndole por Internet abra su tienda para vender no sólo en local, 
+							pero a un mercado mundial. Ofrecemos una solución de comercio electrónico 
+							específica a su negocio, permitiendo que usted maneje sus productos y 
+							que venda por Internet. Le ayudamos a lanzar su tienda online y comenzas 
+							a vender sus productos.
+						</p>
+						<p>
+							<a href="#contacto">Contacta con nosotros para encontrar la solucion más adecuada.</a>
+                        </p>
+						<h2>Sistemas de gestión de contenido</h2>
+						<p>
+							Un sistema de gestión, fácil de uso, permitiendo que usted maneja el 
+							contenido de su página Web. Logeate en el panel de control donde usted 
+							puede realizar cambios textuales sin ocuparse de cualquier lenguaje de 
+							programación.
+						</p>
+						<p>
+							Si usted tiene un ordenador y una conexión de internet usted puede 
+							utilizar nuestro sistema de gestión para manejar el contenido de su 
+							página Web, tan a menudo como usted tiene gusto.
+						</p>
+						<p>
+							Si desea más información, <a href="#contacto">contacte con nosotros</a>.
+						</p>
+						<h2>Hospedaje Web y registración de dominios</h2>
+						<p>
+							Para hacerle disponible en el Internet y enviar/recibir correo electrónico 
+							usted necesitará hospedaje Web. No sólo diseñamos y construimos su página Web, 
+							también le ofrecemos el hospedaje adaptado para cumplir sus requisitos.
+						</p>
+						<p>
+							Un dominio de Internet es una etiqueta de identificación asociada a un 
+							grupo de dispositivos o equipos conectados a la red internet. El registro 
+							de un domino para su página Webes el primer paso en crear su presencia online.
+						</p>
+						<p>
+							Contacte con nosotros para encontrar 
+							<a href="#contacto">más información sobre alojamiento Web y dominios</a>.
+						</p>
+                    </div>
+                    <div class="large-4 cell show-for-large">
+                        <img alt="electronics" src="graphics/831284068.jpg" title="electronics">
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <section class="services">
                 <div class="show-for-large" id="triangle-left"></div>
                 <div class="show-for-large" id="triangle-middle"></div>
