--- a/_slicing/src/index.html
+++ b/_slicing/src/index.html
@@ -174,112 +174,62 @@
 		<section class="hero-header">
 			<div class="grid-container">
 				<div>
-					<h1>Sobre nosotros</h1>
-					<p class="subtitle">La referencia para disno web en la provincia de Alicante</p>
-				</div>
-			</div>
-		</section>
-		<section class="about">
-			<div class="grid-container">
-				<div class="grid-x">
-					<div class="medium-12 large-8 cell">
-						<h2>La empresa</h2>
-						<p>
-							Encantado diseño Web es una agencia especializada en el diseño y 
-							desarrollo de páginas Web elegantes que ayuda su organización a 
-							atraer y conservar el interes de sus clientes.
-						</p>
-						<p>
-							¡Nos encanta la web y entendemos lo que su empresa o 
-							organización necesita!
-						</p>
-						<p>
-							Tenemos más de 10 años de experencia combinada en el 
-							sector de diseño web. Desde septiembre 2006 estamos 
-							llevando la presentación de varias empresas a través de 
-							internet en la region de Alicante con Torrevieja como nuestra base.
-						</p>
-						<h2>Nesta misión</h2>
-						<p>
-							!Tener una página web no es suficiente¡ Una página web es su 
-							tarjeta de visita accesible para todos en cada momento del día. 
-							Así es muy importante que su página trae el mensaje adecuado 
-							para su negocio.
-						</p>
-						<p>
-							Le ayudamos a alcanzar nuevas audiencias y generar tráfico, 
-							promover su producto a través de internet y gestionar su propio 
-							contenido. Infórmenos sobre cuales son las características de su 
-							negocio, y le ofreceremos la solución que mejor se adapte a sus 
-							necesidades y que le permita sacar un mayor rendimiento a su página web.
-						</p>
-					</div>
-					<div class="large-4 cell show-for-large">
-						<img alt="electronics" src="graphics/831284068.jpg" title="electronics">
-					</div>
+					<h1>Fotografía</h1>
+					<p class="subtitle">
+                        Fotografía profesional para su página Web y campañas de marketing
+					</p>
 				</div>
 			</div>
         </section>
         
-        <section class="why attitude">
-                <div class="grid-container">
-                    <div class="grid-x grid-margin-x">
-                        <div class="medium-12 large-3 cell">
-                            <h4>Nuestra actitud</h4>
-                        </div>
-                        <div class="medium-6 large-4 cell checkmark-green">
-                            <ul>
-                                <li>Somos apasionados en traducir su mensaje en una herramienta de gran alcance.</li>
-                                <li>Escuchamos nuestros clientes y planteamos ideas con ellos.</li>
-                                <li>Creamos páginas web que cumplen los estandares de web.</li>
-                            </ul>
-                        </div>
-                        <div class="medium-6 large-5 cell checkmark-green">
-                            <ul>
-                                <li>Creamos páginas web accesible y fácil de usar.</li>
-                                <li>Creamos páginas web que atraen sus audiencias y generan ventas</li>
-                                <li>Nuestros trabajos han sido presentados en varias galerías de diseño Web y libros.</li>
-                            </ul>
-                        </div>
+        <section class="about">
+            <div class="grid-container">
+                <div class="grid-x">
+                    <div class="medium-12 large-8 cell">
+                        <h2 class="no-underline">Fotografía profesional inmobiliaria</h2>
+                        <p>
+                            Es muy importante presentar tus inmuebles de manera profesional. Si no 
+                            parecen profesionales, el comprador no solo verá la vivienda poco atractivo, 
+                            pero tambíen va a asociar su empresa a ser no profesionales.
+                        </p>
+                        <p>
+                            Contacte con nosotros para 
+                            <a href="#contacto">más información sobre Fotografía profesional inmobiliaria</a>.
+                        </p>
+                        <h2 class="no-underline">Fotografía Publicitaria y Fotografía de Producto</h2>
+                        <p>
+                            Una buena foto vale más que mil palabras y una presentación profesional 
+                            es clave en el desarrollo de su negocios. La foto adecuada de su producto 
+                            garantiza la imagen perfecta en los ojos de los clientes potenciales.
+                        </p>
+                        <p>
+                            ¿Usted tiene una gran gama de productos a mostrar en su página Web? Dejalos 
+                            fotografiar de manera profesional. Nuestro fotógrafo profesional dará 
+                            la presentación que sus productos merecen…
+                        </p>
+                        <p>
+                            Si desea más información, 
+                            <a href="#contacto">contacte con nosotros</a>.
+                        </p>
+                        <h2 class="no-underline">Visitas virtuales 360°</h2>
+                        <p>
+                            Las visitas virtuales son una herramienta de markting muy eficaz para 
+                            exhibir productos y espacios interiores. Permiten la visibilidad 100% 
+                            en todas las direcciones que ofrecen una mejor comprensión del 
+                            producto o del espacio.
+                        </p>
+                        <p>
+                            Contacte con nosotros para 
+                            <a href="#contacto">más información sobre Visitas virtuales 360°</a>.
+                        </p>
+                    </div>
+                    <div class="large-4 cell show-for-large">
+                        <img alt="electronics" src="graphics/831284068.jpg" title="electronics">
                     </div>
                 </div>
-            </section>
-
-		<section class="why attitude">
-			<div class="grid-container">
-				<div class="grid-x grid-margin-x">
-                    <div class="cell large-6">
-                        <h4>Servicios de diseno</h4>
-                        <ul class="services-list">
-                            <li>Diseno Web</li>
-                            <li>Logotipos</li>
-                            <li>Diseno grafico</li>
-                        </ul>
-
-                        <h4>Servicios de diseno</h4>
-                        <ul class="services-list">
-                            <li>Optimizacion para buscadores</li>
-                            <li>Boletines de noticias</li>
-                        </ul>
-                    </div>
-
-                    <div class="cell large-6">
-                        <h4>Servicios de desarrollo web</h4>
-                        <ul class="services-list">
-                            <li>Tiendas online</li>
-                            <li>Sistemas de gestion de contenido</li>
-                            <li>Alojamiento web y dominios</li>
-                        </ul>
-                        <h4>services de fotografia</h4>
-                        <ul class="services-list">
-                            <li>fotografia profesional inmobiliaria</li>
-                            <li>fotografia publicitaria y d producto</li>
-                            <li>visitas virtuales 360</li>
-                        </ul>
-                    </div>                                
-				</div>
-			</div>
+            </div>
         </section>
+        
         <section class="services">
                 <div class="show-for-large" id="triangle-left"></div>
                 <div class="show-for-large" id="triangle-middle"></div>
@@ -340,7 +290,7 @@
 							<div class="logo">
 								<a href="#"><img alt="encantado" class="image" src="graphics/svg/encantado.svg"></a>
 								<div class="text">
-									<span class="title">Encantadojklbjkjjk</span>
+									<span class="title">Encantado</span>
 								</div>
 							</div>
 							<p><b>Diseño web Torrevieja</b><br>
