--- a/_slicing/src/marketing-online.html
+++ b/_slicing/src/marketing-online.html
@@ -174,76 +174,59 @@
 		<section class="hero-header">
 			<div class="grid-container">
 				<div>
-					<h1>Sobre nosotros</h1>
-					<p class="subtitle">La referencia para disno web en la provincia de Alicante</p>
-				</div>
-			</div>
-		</section>
-		<section class="about">
-			<div class="grid-container">
-				<div class="grid-x">
-					<div class="medium-12 large-8 cell">
-						<h2>La empresa</h2>
-						<p>
-							Encantado diseño Web es una agencia especializada en el diseño y 
-							desarrollo de páginas Web elegantes que ayuda su organización a 
-							atraer y conservar el interes de sus clientes.
-						</p>
-						<p>
-							¡Nos encanta la web y entendemos lo que su empresa o 
-							organización necesita!
-						</p>
-						<p>
-							Tenemos más de 10 años de experencia combinada en el 
-							sector de diseño web. Desde septiembre 2006 estamos 
-							llevando la presentación de varias empresas a través de 
-							internet en la region de Alicante con Torrevieja como nuestra base.
-						</p>
-						<h2>Nesta misión</h2>
-						<p>
-							!Tener una página web no es suficiente¡ Una página web es su 
-							tarjeta de visita accesible para todos en cada momento del día. 
-							Así es muy importante que su página trae el mensaje adecuado 
-							para su negocio.
-						</p>
-						<p>
-							Le ayudamos a alcanzar nuevas audiencias y generar tráfico, 
-							promover su producto a través de internet y gestionar su propio 
-							contenido. Infórmenos sobre cuales son las características de su 
-							negocio, y le ofreceremos la solución que mejor se adapte a sus 
-							necesidades y que le permita sacar un mayor rendimiento a su página web.
-						</p>
-					</div>
-					<div class="large-4 cell show-for-large">
-						<img alt="electronics" src="graphics/831284068.jpg" title="electronics">
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<section class="why attitude">
-			<div class="grid-container">
-				<div class="grid-x grid-margin-x">
-					<div class="medium-12 large-3 cell">
-						<h4>Nuestra actitud</h4>
-					</div>
-					<div class="medium-6 large-4 cell checkmark-green">
-						<ul>
-							<li>Somos apasionados en traducir su mensaje en una herramienta de gran alcance.</li>
-							<li>Escuchamos nuestros clientes y planteamos ideas con ellos.</li>
-							<li>Creamos páginas web que cumplen los estandares de web.</li>
-						</ul>
-					</div>
-					<div class="medium-6 large-5 cell checkmark-green">
-						<ul>
-							<li>Creamos páginas web accesible y fácil de usar.</li>
-							<li>Creamos páginas web que atraen sus audiencias y generan ventas</li>
-							<li>Nuestros trabajos han sido presentados en varias galerías de diseño Web y libros.</li>
-						</ul>
-					</div>
+					<h1>Marketing online</h1>
+					<p class="subtitle">
+                        Campañas rentables que aumentan sus ventas y el número de visitantes
+					</p>
 				</div>
 			</div>
         </section>
+        
+        <section class="about">
+            <div class="grid-container">
+                <div class="grid-x">
+                    <div class="medium-12 large-8 cell">
+                        <h2 class="no-underline">Posicionamiento y optimización para buscadores</h2>
+                        <p>
+                            <b>La optimización para buscadores</b> es un proceso que consiste en 
+                            <b>mejorar el posicionamiento de su página Web en los motores de búsqueda más 
+                            importantes</b> (Google, Yahoo,…) para poder aumentar su volumen de negocio.
+                        </p>
+                        <p>
+                            Creamos código limpio, cumpliendo los estándares Web. Nos centramos en 
+                            realizar páginas accesibles, mejor valoradas por los buscadores. 
+                            Aplicamos etiquetas Meta y palabras clave, contenido optimizado y 
+                            enlaces externos/internos.
+                        </p>
+                        <p>
+                            Contacte con nosotros para 
+                            <a href="#contacto">más información sobre posicionamiento y optimización para buscadores</a>.
+                        </p>
+                        <h2 class="no-underline">Marketing por correo electrónico y boletines de noticias</h2>
+                        <p>
+                            El <b>marketing por correo electrónico</b> le permite informar de 
+                            <b>sus novedades, productos y ofertas</b>. Contribuye a fidelizar clientes, 
+                            incrementa las ventas y asegura el aumento de las visitas a su página web.
+                        </p>
+                        <p>
+                            Las campañas de marketing por correo electrónico son 
+                            <b>más rentables que el correo tradicional</b>. Usted ahorra dinero en la 
+                            impresión, el envio y el franqueo. Así, a través de su página, usted 
+                            invita a sus clientes a suscribirse al boletín de noticias, para que 
+                            puedan estar al tanto de las novedades, ofertas y promociones más recientes.
+                        </p>
+                        <p>
+                            Si desea más información, 
+                            <a href="#contacto">contacte con nosotros</a>.
+                        </p>
+                    </div>
+                    <div class="large-4 cell show-for-large">
+                        <img alt="electronics" src="graphics/831284068.jpg" title="electronics">
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <section class="services">
                 <div class="show-for-large" id="triangle-left"></div>
                 <div class="show-for-large" id="triangle-middle"></div>
