--- a/_slicing/src/servicios.html
+++ b/_slicing/src/servicios.html
@@ -178,72 +178,73 @@
 					<p class="subtitle">La referencia para disno web en la provincia de Alicante</p>
 				</div>
 			</div>
-		</section>
-		<section class="about">
-			<div class="grid-container">
-				<div class="grid-x">
-					<div class="medium-12 large-8 cell">
-						<h2>La empresa</h2>
-						<p>
-							Encantado diseño Web es una agencia especializada en el diseño y 
-							desarrollo de páginas Web elegantes que ayuda su organización a 
-							atraer y conservar el interes de sus clientes.
-						</p>
-						<p>
-							¡Nos encanta la web y entendemos lo que su empresa o 
-							organización necesita!
-						</p>
-						<p>
-							Tenemos más de 10 años de experencia combinada en el 
-							sector de diseño web. Desde septiembre 2006 estamos 
-							llevando la presentación de varias empresas a través de 
-							internet en la region de Alicante con Torrevieja como nuestra base.
-						</p>
-						<h2>Nesta misión</h2>
-						<p>
-							!Tener una página web no es suficiente¡ Una página web es su 
-							tarjeta de visita accesible para todos en cada momento del día. 
-							Así es muy importante que su página trae el mensaje adecuado 
-							para su negocio.
-						</p>
-						<p>
-							Le ayudamos a alcanzar nuevas audiencias y generar tráfico, 
-							promover su producto a través de internet y gestionar su propio 
-							contenido. Infórmenos sobre cuales son las características de su 
-							negocio, y le ofreceremos la solución que mejor se adapte a sus 
-							necesidades y que le permita sacar un mayor rendimiento a su página web.
-						</p>
-					</div>
-					<div class="large-4 cell show-for-large">
-						<img alt="electronics" src="graphics/831284068.jpg" title="electronics">
-					</div>
-				</div>
-			</div>
-		</section>
+        </section>
+        
+        <section class="about">
+            <div class="grid-container">
+                <div class="grid-x">
+                    <div class="medium-12 large-8 cell">
+                        <h2>Agencia creativa de diseño Web</h2>
+                        <p>
+                            Con pensamientos innovador, comunicación clara y utilizando 
+                            nuestras cualificaciones profesionales ayudamos a los clientes a 
+                            crear y entregar el mensaje correcto.
+                        </p>
+                        <p>
+                            Nos dedicamos a hacerle la mirada buena con nuestros servicios 
+                            profesionales de diseño Web y diseño gráfico para ayudar a hacer 
+                            su negocio aún más acertado.
+                        </p>
+                        <p>
+                            Como agencia creativa trabajamos para una amplia variedad de 
+                            clientes, entregando diseño gráfico para imprenta, diseño Web 
+                            y desarrollo Web, identidad corporativa, marketing a través 
+                            de Internet y fotografía profesional.
+                        </p>
+                    </div>
+                    <div class="large-4 cell show-for-large">
+                        <img alt="electronics" src="graphics/831284068.jpg" title="electronics">
+                    </div>
+                </div>
+            </div>
+        </section>
 
 		<section class="why attitude">
 			<div class="grid-container">
 				<div class="grid-x grid-margin-x">
-					<div class="medium-12 large-3 cell">
-						<h4>Nuestra actitud</h4>
-					</div>
-					<div class="medium-6 large-4 cell checkmark-green">
-						<ul>
-							<li>Somos apasionados en traducir su mensaje en una herramienta de gran alcance.</li>
-							<li>Escuchamos nuestros clientes y planteamos ideas con ellos.</li>
-							<li>Creamos páginas web que cumplen los estandares de web.</li>
-						</ul>
-					</div>
-					<div class="medium-6 large-5 cell checkmark-green">
-						<ul>
-							<li>Creamos páginas web accesible y fácil de usar.</li>
-							<li>Creamos páginas web que atraen sus audiencias y generan ventas</li>
-							<li>Nuestros trabajos han sido presentados en varias galerías de diseño Web y libros.</li>
-						</ul>
-					</div>
+                    <div class="cell large-6">
+                        <h4>Servicios de diseno</h4>
+                        <ul class="services-list">
+                            <li><a href="">Diseno Web</a></li>
+                            <li><a href="">Logotipos</a></li>
+                            <li><a href="">Diseno grafico</a></li>
+                        </ul>
+
+                        <h4>Marketing a través de Internet</h4>
+                        <ul class="services-list">
+                            <li><a href="">Optimizacion para buscadores</a></li>
+                            <li><a href="">Boletines de noticias</a></li>
+                        </ul>
+                    </div>
+
+                    <div class="cell large-6">
+                        <h4>Servicios de desarrollo web</h4>
+                        <ul class="services-list">
+                            <li><a href="">Tiendas online</a></li>
+                            <li><a href="">Sistemas de gestion de contenido</a></li>
+                            <li><a href="">Alojamiento web y dominios</a></li>
+                        </ul>
+                        <h4>services de fotografia</h4>
+                        <ul class="services-list">
+                            <li><a href="">fotografia profesional inmobiliaria</a></li>
+                            <li><a href="">fotografia publicitaria y d producto</a></li>
+                            <li><a href="">visitas virtuales 360</a></li>
+                        </ul>
+                    </div>                                
 				</div>
 			</div>
         </section>
+        
         <section class="services">
                 <div class="show-for-large" id="triangle-left"></div>
                 <div class="show-for-large" id="triangle-middle"></div>
