--- a/_slicing/src/index.html
+++ b/_slicing/src/index.html
@@ -39,7 +39,6 @@
 	<meta content="Encantado" name="twitter:title">
 	<meta content="Diseño de páginas web profesionales en Torrevieja" name="twitter:description">
 	<meta content="https://encantado.es/graphics/image1200x630.jpg" name="twitter:image">
-	<script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 <body>
 	<header class="header grid-x" id="header-menu">
@@ -82,7 +81,7 @@
 						<a class="is-active" href="#">inicio</a>
 					</li>
 					<li>
-						<a href="#">nosotros</a>
+						<a href="nosotros.html">nosotros</a>
 					</li>
 					<li>
 						<a href="#">trabajos</a>
@@ -119,7 +118,7 @@
 					<a class="is-active" href="#">inicio</a>
 				</li>
 				<li>
-					<a href="#">nosotros</a>
+					<a href="nosotros.html">nosotros</a>
 				</li>
 				<li>
 					<a href="#">trabajos</a>
@@ -172,85 +171,218 @@
 		</div>
 	</header>
 	<main>
-		<section class="hero-header">
-			<div class="grid-container">
-				<div>
-					<h1>Contacto</h1>
+		<section class="hero-slider">
+			<div id="particles-js"></div>
+			<div class="container">
+				<h1>Diseño de páginas web<br>
+				profesionales en Torrevieja</h1>
+				<div id="typed-strings">
+					<p>diseño y desarrollo de páginas web</p>
+					<p>webs inmobiliaria com CMS y CRM</p>
+					<p>posicionamiento web / SEO</p>
+				</div>
+				<p>Expertos en <span class="typer"></span></p>
+			</div>
+		</section>
+		<section class="projects">
+			<div class="grid-container full">
+				<div class="grid-x grid-margin-x grid-margin-y">
+					<div class="medium-6 large-4 cell">
+						<a href="">
+							<img src="graphics/featured1.jpg" alt="featured">
+							<div class="overlay" style="background-color:red;">
+							</div>
+							<p class="title">Nombre projecto</p>
+							<p class="description">Web responsive</p>
+						</a>
+						
+					</div>
+					<div class="medium-6 large-4 cell">
+						<img class="myimage" src="graphics/featured2.jpg" alt="featured">
+						<p class="title">Nombre projecto</p>
+						<p class="description">Web responsive</p>
+					</div>
+					<div class="medium-6 large-4 cell">
+						<img src="graphics/featured1.jpg" alt="featured">
+						<p class="title">Nombre test</p>
+						<p class="description">Web responsive</p>
+					</div>
+					<div class="medium-6 large-4 cell">
+						<p class="title">Nombre projecto</p>
+						<p class="description">Web responsive</p>
+					</div>
+					<div class="medium-6 large-4 cell">
+						<p class="title">Nombre projecto</p>
+						<p class="description">Web responsive</p>
+					</div>
+					<div class="medium-6 large-4 cell">
+						<p class="title">Nombre projecto</p>
+						<p class="description">Web responsive</p>
+					</div>
 				</div>
 			</div>
 		</section>
-		<section class="contact contact-white">
+		<section class="intro">
+			<div class="show-for-large" id="triangle-grey"></div>
+			<div class="grid-container">
+				<div class="grid-x">
+					<div class="medium-12 large-8 cell">
+						<h2>Diseño Web de alta calidad<br>
+						para gente que toma su negocio en serio</h2>
+						<p class="info">Estamos especializados en el diseño de paginas web profesionales, usando los últimos estándares y soluciones de desarrollo web para que pueda promocionar su negocio a través de Internet.</p>
+						<p>Desde el diseño más sencillo hasta grandes aplicaciones dinámicas, tiendas online o webs para inmobiliarias.</p>
+						<p>Contamos con <b>más de 12 años de experiencia</b> en el diseño y desarrollo de páginas web, que no sólo parecen buenos sino que son también técnicamente correctos. Además nos encargamos de que su página web esté <b>optimizada para los motores de búsqueda</b> y le proporcionamos un alojamiento web ajustado a sus necesidades.</p>
+					</div>
+					<div class="large-4 cell show-for-large"><img alt="electronics" src="graphics/831284068.jpg" title="electronics"></div>
+				</div>
+			</div>
+		</section>
+		<section class="services">
+			<div class="show-for-large" id="triangle-left"></div>
+			<div class="show-for-large" id="triangle-middle"></div>
+			<div class="show-for-large" id="triangle-right"></div>
+			<div class="grid-container">
+				<h4>Servicios</h4>
+				<hr>
+				<div class="grid-x grid-margin-x">
+					<div class="small-12 medium-4 large-4 cell">
+						<dl>
+							<dt>Diseño Web</dt>
+							<dd>
+								<a href="#">Desarrollo Web</a>,
+							</dd>
+							<dd>
+								<a href="#">Diseño Web</a>,
+							</dd>
+							<dd>
+								<a href="#">accesibilidad y usabilidad</a>.
+							</dd>
+						</dl>
+					</div>
+					<div class="small-12 medium-4 large-4 cell">
+						<dl>
+							<dt>Diseño gráfico</dt>
+							<dd><p>Soluciones creativas:</p></dd>
+							<dd>
+								<a href="#">Diseño gráfico</a>,
+							</dd>
+							<dd>
+								<a href="#">fotografía</a>,
+							</dd>
+							<dd>
+								<a href="#">publicidad y logotipos</a>.
+							</dd>
+						</dl>
+					</div>
+					<div class="small-12 medium-4 large-4 cell">
+						<dl>
+							<dt>Mantenimiento Web</dt>
+							<dd>
+								<a href="#">Sistemas de gestión de contenido (CMS)</a>
+							</dd>
+							<dd>
+								y <a href="#">gestión de relaciones con clientes (CRM)</a>.
+							</dd>
+						</dl>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="why">
+			<div class="grid-container">
+				<div class="grid-x grid-margin-x">
+					<div class="medium-12 large-3 cell">
+						<h3>Por qué eligirnos?</h3>
+						<hr>
+					</div>
+					<div class="medium-6 large-4 cell checkmark">
+						<ul>
+							<li>Sabemos que si hacemos <u>un buen trabajo</u>, usted <u>mejora su negocio</u>.</li>
+							<li>Lo enfocamos de manera profesional. Entregamos <u>trabajos de calidad y en plazo</u>.</li>
+							<li>Realizamos un trabajo con una <u>excelente calidad-precio</u>.</li>
+						</ul>
+					</div>
+					<div class="medium-6 large-5 cell cross">
+						<ul>
+							<li>No creemos en el trabajo rápido y descuidado. Realizamos <u>un trabajo sólido</u>.</li>
+							<li>No creemos en soluciones prefabricadas. Cada trabajo es <u>único y personalizado</u> de acuerdo con las necesidades de cada cliente.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section class="contact">
 			<div class="grid-container">
 				<div class="grid-x grid-margin-x">
 					<div class="small-5 cell">
-						<h2>Encantado</h2>
-						<p>
-							Telefono: <a href="tel:+34965703302">+34 965 703 302</a><br>
-							Movil: <a href="tel:+34651557615">+34 965 703 302</a><br>
-							Email: <a href="mailto:info@encantado.net">info@encantado.net</a>
-						</p>
-						<p>
-							<b>Diseño web Torrevieja</b><br>
-							Avda. de los Nenúfares S/N <br>
-							Vivero de empresas, despacho 15 <br>
-							03181 Torrevieja (Alicante), Spain <br>
-						</p>
+						<h4>Si buscas:</h4>
+						<h4 class="above">Si buscas:</h4>
+						<p>Diseño de paginas web, con cada detalle cuidado al máximo. Hecho a medida, con un diseño único para diferenciarse claramente de la competencia. Facil de mantener. Multilingüe. Responsivo, adaptando a cualquier pantalla o dispositivo. Y preparado para conseguir clientes y vender su producto. <span></span></p>
 					</div>
 					<div class="small-7 cell">
 						<div class="callout success hide" data-closable="" id="callout">
 							<h5>Gracias por tu mensaje</h5><button aria-label="Dismiss alert" class="close-button" data-close="" type="button"><span aria-hidden="true">&times;</span></button>
 						</div>
+						<h4>Pide su presupuesto</h4>
+						<hr>
 						<form action="#contact-form" class="multi-form" data-abide="" id="contact-form" method="get" name="contact-form" novalidate="">
-								<div class="grid-x grid-margin-x">
+							<fieldset class="active">
+								<div class="grid-x">
 									<div class="small-12 medium-6 cell">
 										<label for="nombre">Nombre*</label> <input id="nombre" name="nombre" pattern="[a-zA-Z\s]+" required="" type="text">
 									</div>
 									<div class="small-12 medium-6 cell">
-										<label for="telefono">Teléfono*</label> <input id="telefono" name="telefono" pattern="number" required="" type="text">
+										<label for="apellido">Apellido(s)*</label> <input id="apellido" name="apellido" pattern="[a-zA-Z\s]+" required="" type="text">
 									</div>
 									<div class="small-12 medium-6 cell">
 										<label for="email">E-mail*</label> <input id="email" name="email" pattern="email" required="" type="text">
 									</div>
 									<div class="small-12 medium-6 cell">
+										<label for="telefono">Teléfono*</label> <input id="telefono" name="telefono" pattern="number" required="" type="text">
+									</div>
+									<div class="small-12 medium-6 cell">
+										<label for="empresa">Empresa</label> <input id="empresa" name="empresa" type="text">
+									</div>
+									<div class="small-12 medium-6 cell">
 										<label for="localidad">Localidad*</label> <input id="localidad" name="localidad" pattern="[a-zA-Z\s]+" required="" type="text">
 									</div>
+								</div>
+							</fieldset>
+							<fieldset>
+								<div class="grid-x">
 									<div class="small-12 cell">
-
-										<label for="categoria">Hoe gevonden?*  
-											<span class="plain-select">
-												<select id="categoria inp" name="categoria" required="">
-													<option value="">
-														escoger
-													</option>
-													<option value="immo">
-														immo
-													</option>
-													<option value="hotel">
-														hotel
-													</option>
-													<option value="ventas">
-														ventas
-													</option>
-												</select>
-											</span> 
-										</label>
-									</div>
-									<div class="small-12 cell">
-										<label for="descripcion">Descripción*
-										<textarea id="descripcion" name="descripcion" rows="5" required></textarea></label>
+										<label for="categoria">Categoría* <select id="categoria" name="categoria" required="">
+											<option value="">
+												escoger
+											</option>
+											<option value="immo">
+												immo
+											</option>
+											<option value="hotel">
+												hotel
+											</option>
+											<option value="ventas">
+												ventas
+											</option>
+										</select></label>
 									</div>
 								</div>
+								<div class="grid-x">
+									<div class="small-12 cell">
+										<label for="descripcion">Descripción 
+										<textarea id="descripcion" name="descripcion" rows="5"></textarea></label>
+									</div>
+								</div>
+							</fieldset>
 							<div class="buttons">
-								<button type="button submit btn-enviar" class="button btn-enviar g-recaptcha" data-sitekey="6LdU6k8UAAAAABHZeJqi21ZgaP84d0r7MsP7HjaE"
-								data-callback="YourOnSubmitFn">Enviar</button>
+								<a class="prev">
+								<div class="circle"><img alt="Next" src="graphics/svg/noun_1086550.svg"></div></a> <a class="next">
+								<div class="circle"><img alt="Next" src="graphics/svg/noun_1086550.svg"></div></a> <button class="submit circle"><img alt="Next" src="graphics/svg/send.svg"></button>
 							</div>
 						</form>
 					</div>
 				</div>
 			</div>
-		</section>
-		<section class="google-map">
-			<p>google maps</p>
 		</section>
 	</main>
 	<footer class="footer">
@@ -311,5 +443,9 @@
 			</div>
 		</div>
 	</footer>
+	<script src="src/js/particles.js">
+	</script> 
+	<script src="src/js/particles-config.js">
+	</script>
 </body>
 </html>
